--- a/.travis.yml
+++ b/.travis.yml
@@ -2,28 +2,16 @@
 
 language: python
 python:
-  - 3.6
-  - 3.5
-  - 3.4
+  - 3.7
   - 2.7
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox-travis
+before_install:
+    - sudo apt-get update
+    - sudo apt-get install curl
+install: pip install -U -r requirements_dev.txt
 
 # Command to run tests, e.g. python setup.py test
-script: tox
-
-# Assuming you have installed the travis-ci CLI tool, after you
-# create the Github repo and add it to Travis, run the
-# following command to finish PyPI deployment setup:
-# $ travis encrypt --add deploy.password
-deploy:
-  provider: pypi
-  distributions: sdist bdist_wheel
-  user: PacketPerception
-  password:
-    secure: PLEASE_REPLACE_ME
-  on:
-    tags: true
-    repo: ExterraGroup/pyrsi
-    python: 3.6
+script: nosetests --with-coverage --cover-package=rsi
+after_success:
+    - coveralls
