--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,14 @@
 [tox]
-envlist = py27, py34, py35, py36, flake8
+envlist = py27, py37
 
 [travis]
 python =
-    3.6: py36
-    3.5: py35
-    3.4: py34
+    3.7: py37
     2.7: py27
 
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 pyrsi
-
 [testenv]
+deps = -rrequirements_dev.txt
 setenv =
     PYTHONPATH = {toxinidir}
-
-commands = python setup.py test
+commands = nosetests --with-coverage --cover-package=rsi
 
