--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py27, py37
+envlist = py38
 
 [travis]
 python =
-    3.7: py37
-    2.7: py27
+    3.8: py38
 
 [testenv]
 deps = -rrequirements_dev.txt
